0.23
    * Fix pm_wait routine to exit without a warning
    * Fix pm_wait to correctly detect child processes which have died.
    * Fix to return SIGCHLD handler to it's default state in the
      pm_manage loop so that loading code which sets SIGCHLD to ignore
      won't interfear with normal operation.

0.22 2011-08-04 Tomas Doran  <bobtfish@bobtfish.net>
    * Ship a version of FCGI::ProcManager::Constrainted which actually
      works as advertised.

0.21 2011-08-02 Tomas Doran  <bobtfish@bobtfish.net>
    * Ship a working dist.

0.20 2011-08-02 Gareth Kirwan  <gbjk@cpan.org>
    * ProcManager::Constrained: Add a new FCGI::ProcManager::Constrainted
      subclass which will restart workers safely after a certain number of
      requests, or at certain memory thresholds.
    * ProcManager: Fix start_delay causing a permanent hang.

0.19 2009-07-22 Gareth Kirwan  <gbjk@cpan.org>

    * ProcManager.pm: Add a pm_title option to configure the process title
      assigned to $0

0.18 2007-12-18 James Jurach  <muaddib@erf.net>

     * ProcManager.pm: Remove constraint that parent process cannot die.

0.17

	* ProcManager.pm: Remove constraint that process can't change pid.
	  This resolves the daemon exiting after first child dies
	  if the process id of the daemon has changed since starting.
	  This commonly happens when a script waits to check for the
	  socket being available and working before forking and exitting.
	  It can also happen in a race condition of fork && exit when
	  the exit is delayed until after the forked child has already
	  spawned the fastcgi handlers.

2001-04-23 18:12  James Jurach  <muaddib@erf.net>

	* ProcManager.pm: SIGHUP handler now issues SIGTERM to children but
	then proceeds normally. added documentation blurb about signal
	handling. we now use POSIX::sigaction() to avoid SA_RESTART during
	certain regions. added re-usable POSIX::SigAction members to toggle
	SA_RESTART. added sig_sub() -- necessary to pass name to